src/OpenCvSharp.Native/include/open_cv_sharp/features2d/features2d.h

typedef struct jyppx_ocv_features2d_brisk jyppx_ocv_features2d_brisk;
typedef struct jyppx_ocv_features2d_kaze jyppx_ocv_features2d_kaze;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_create(
    int threshold,
    int octaves,
    float pattern_scale,
    jyppx_ocv_features2d_brisk** brisk);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_create_pattern(
    const float* radius_list,
    int radius_count,
    const int* number_list,
    int number_count,
    float d_max,
    float d_min,
    const int* index_change,
    int index_change_count,
    jyppx_ocv_features2d_brisk** brisk);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_create_pattern_with_threshold(
    int threshold,
    int octaves,
    const float* radius_list,
    int radius_count,
    const int* number_list,
    int number_count,
    float d_max,
    float d_min,
    const int* index_change,
    int index_change_count,
    jyppx_ocv_features2d_brisk** brisk);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_features2d_brisk_release(jyppx_ocv_features2d_brisk* brisk);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_clear(jyppx_ocv_features2d_brisk* brisk);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_empty(const jyppx_ocv_features2d_brisk* brisk, int* empty);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_descriptor_size(const jyppx_ocv_features2d_brisk* brisk, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_descriptor_type(const jyppx_ocv_features2d_brisk* brisk, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_default_norm(const jyppx_ocv_features2d_brisk* brisk, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_default_name_length(const jyppx_ocv_features2d_brisk* brisk, int* length);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_default_name_fill(const jyppx_ocv_features2d_brisk* brisk, char* buffer, int buffer_capacity, int* written);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_detect_count(const jyppx_ocv_features2d_brisk* brisk, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_detect_fill(const jyppx_ocv_features2d_brisk* brisk, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, jyppx_ocv_key_point* keypoints, int keypoint_capacity, int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_compute(const jyppx_ocv_features2d_brisk* brisk, const jyppx_ocv_mat* image, const jyppx_ocv_key_point* keypoints_in, int keypoint_count, jyppx_ocv_key_point* keypoints_out, int keypoint_capacity, int* written_keypoint_count, jyppx_ocv_mat* descriptors);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_detect_and_compute_count(const jyppx_ocv_features2d_brisk* brisk, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, const jyppx_ocv_key_point* keypoints_in, int keypoint_count, int use_provided_keypoints, int* output_keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_detect_and_compute_fill(const jyppx_ocv_features2d_brisk* brisk, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, const jyppx_ocv_key_point* keypoints_in, int keypoint_count, int use_provided_keypoints, jyppx_ocv_key_point* keypoints_out, int keypoint_capacity, int* output_keypoint_count, jyppx_ocv_mat* descriptors);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_get_threshold(const jyppx_ocv_features2d_brisk* brisk, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_set_threshold(jyppx_ocv_features2d_brisk* brisk, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_get_octaves(const jyppx_ocv_features2d_brisk* brisk, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_set_octaves(jyppx_ocv_features2d_brisk* brisk, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_get_pattern_scale(const jyppx_ocv_features2d_brisk* brisk, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_brisk_set_pattern_scale(jyppx_ocv_features2d_brisk* brisk, float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_create(
    int extended,
    int upright,
    float threshold,
    int n_octaves,
    int n_octave_layers,
    int diffusivity,
    jyppx_ocv_features2d_kaze** kaze);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_features2d_kaze_release(jyppx_ocv_features2d_kaze* kaze);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_clear(jyppx_ocv_features2d_kaze* kaze);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_empty(const jyppx_ocv_features2d_kaze* kaze, int* empty);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_descriptor_size(const jyppx_ocv_features2d_kaze* kaze, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_descriptor_type(const jyppx_ocv_features2d_kaze* kaze, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_default_norm(const jyppx_ocv_features2d_kaze* kaze, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_default_name_length(const jyppx_ocv_features2d_kaze* kaze, int* length);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_default_name_fill(const jyppx_ocv_features2d_kaze* kaze, char* buffer, int buffer_capacity, int* written);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_detect_count(const jyppx_ocv_features2d_kaze* kaze, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_detect_fill(const jyppx_ocv_features2d_kaze* kaze, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, jyppx_ocv_key_point* keypoints, int keypoint_capacity, int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_compute(const jyppx_ocv_features2d_kaze* kaze, const jyppx_ocv_mat* image, const jyppx_ocv_key_point* keypoints_in, int keypoint_count, jyppx_ocv_key_point* keypoints_out, int keypoint_capacity, int* written_keypoint_count, jyppx_ocv_mat* descriptors);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_detect_and_compute_count(const jyppx_ocv_features2d_kaze* kaze, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, const jyppx_ocv_key_point* keypoints_in, int keypoint_count, int use_provided_keypoints, int* output_keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_detect_and_compute_fill(const jyppx_ocv_features2d_kaze* kaze, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, const jyppx_ocv_key_point* keypoints_in, int keypoint_count, int use_provided_keypoints, jyppx_ocv_key_point* keypoints_out, int keypoint_capacity, int* output_keypoint_count, jyppx_ocv_mat* descriptors);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_get_extended(const jyppx_ocv_features2d_kaze* kaze, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_set_extended(jyppx_ocv_features2d_kaze* kaze, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_get_upright(const jyppx_ocv_features2d_kaze* kaze, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_set_upright(jyppx_ocv_features2d_kaze* kaze, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_get_threshold(const jyppx_ocv_features2d_kaze* kaze, double* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_set_threshold(jyppx_ocv_features2d_kaze* kaze, double value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_get_n_octaves(const jyppx_ocv_features2d_kaze* kaze, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_set_n_octaves(jyppx_ocv_features2d_kaze* kaze, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_get_n_octave_layers(const jyppx_ocv_features2d_kaze* kaze, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_set_n_octave_layers(jyppx_ocv_features2d_kaze* kaze, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_kaze_get_diffusivity(const jyppx_ocv_features2d_kaze* kaze, int* value);